syntax = "proto3";
package order;
option go_package = "github.com/blackhorseya/irent/pkg/entity/domain/order/model";

message ArrearsRecord {
  string order_no = 1;
  int64 total_amount = 2;
}

message Arrears {
  repeated ArrearsRecord records = 1;
  int64 total_amount = 2;
}
