syntax = "proto3";
package order;
option go_package = "github.com/blackhorseya/irent/pkg/entity/domain/order/model";

import "google/protobuf/timestamp.proto";

message Lease {
  string no = 1;
  string car_id = 2;
  double car_latitude = 3;
  double car_longitude = 4;
  google.protobuf.Timestamp start_at = 5;
  google.protobuf.Timestamp end_at = 6;
  google.protobuf.Timestamp last_pick_at = 7;
}
